Factor golang code

--- a/stack/.current.md
+++ b/stack/.current.md
@@ -4,6 +4,8 @@ This change has several objectives:
 
 - [ ] Deploy a docker-compose stack that is self-content (no need to build) and
   can be used to demonstrate or kick start a `terrorm-deck` deployment
+- [ ] Make sure it works without a password in the demonstration stack/correct
+  if needed
 - [ ] Create/Publish an AMI so that we can kick off the docker-compose in minutes
   in a Cloud environment
 - [ ] Create a Terraform Deployment that registers the service in an ALB and
